# timing

./: LICENSE  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  deploy-website.yml  hello-world.yml
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md  generate-icons.js
src-tauri/src/: commands.rs  main.rs  scheduler.rs  storage.rs  system.rs
src/components/: AppCard.tsx  SectionHeader.tsx  Settings.tsx  TaskForm.tsx  TaskList.tsx
src/hooks/: use-toast.ts
src/lib/: utils.ts
website/: GITHUB_PAGES_SETUP.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
website/public/: 404.html
website/src/: App.tsx  main.tsx  styles.css
website/src/components/: DownloadButton.tsx  FeatureCard.tsx  Footer.tsx  Header.tsx  Hero.tsx
website/src/pages/: About.tsx  Docs.tsx  Download.tsx  Features.tsx  Home.tsx
